<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >LaundryView</string>
    <string name="title_room_detail" >Room Detail</string>
    <string name="attribution">Data provided by LaundryView</string>
    <string name="washers">Washers</string>
    <string name="dryers">Dryers</string>
    <string name="out_of_service">out of service</string>
    <string name="twolines">\n</string>
    <string name="error_no_network">Can\'t load room list.

        Check that you have network, and try again.
    </string>
    <string name="no_network">Network Unavailable</string>
    <string name="close_button">Close</string>
    <string name="no_campus">Campus Unavailable</string>
    <string name="error_no_campus">LaundryView is only giving demo information.

        If you expected more, try connecting to campus wifi and refreshing.
    </string>
    <string name="continue_button">Continue</string>
    <string name="or">- or -</string>
    <string name="connect_to_wifi">Connect to Campus Wifi</string>
    <string name="open_wifi_settings">Open WiFi settings</string>
    <string name="choose_campus">Choose a Campus</string>
    <string name="enter_link">Enter a Link</string>
    <string name="welcome">Welcome!</string>
    <string name="go">Go</string>
    <string name="no_location_error">Unable to find your location</string>
    <string name="refresh">Refresh</string>
</resources>
