<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".FindCampusActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_link"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="laundryview.com/"
            tools:ignore="HardcodedText"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/pathText"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:imeOptions="actionGo|flagNoExtractUi"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:capitalize="none"
            android:inputType="textUri" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/go"
            android:id="@+id/pathButton" />
    </LinearLayout>
</LinearLayout>